templates/snipeit_template.yaml
---
# Source: snipeit/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-snipeit
  labels:
    helm.sh/chart: snipeit-6.0.4
    app.kubernetes.io/name: snipeit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.0.8"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    
    app.kubernetes.io/name: snipeit
    app.kubernetes.io/instance: release-name
---
# Source: snipeit/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-snipeit
  labels:
    helm.sh/chart: snipeit-6.0.4
    app.kubernetes.io/name: snipeit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.0.8"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: snipeit
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snipeit
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: release-name-snipeit
          image: "snipe/snipe-it:v6.0.8"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 15
            timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /var/lib/snipeit
              subPath: www
            - name: data
              mountPath: /var/www/html/storage/framework/sessions
              subPath: sessions
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-snipeit
---
# Source: snipeit/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-snipeit
  labels:
    helm.sh/chart: snipeit-6.0.4
    app.kubernetes.io/name: snipeit
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.0.8"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: example.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-snipeit
                port:
                  number: 80
